tests/int/use_command/snapshots/integration__int__use_command__own_modules__module_version_flags_r_t_e_G.snap
---
source: tests/int/use_command/own_modules.rs
info:
  program: crawk
  args:
    - use
    - version
    - "-r"
    - "-t"
    - "-e"
    - "-G"
---
success: true
exit_code: 0
----- stdout -----

----- stderr -----
